test/iam/userinvitation-policybinding-gc/02-inviter-user.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: User
metadata:
  name: ui-gc-inviter
  labels:
    test.miloapis.com/scenario: "userinvitation-policybinding-gc"
spec:
  email: inviter@ui-gc-test.local
  givenName: Inviter
  familyName: User
