test/iam/userinvitation-policybinding-gc/03-invitee-user.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: User
metadata:
  name: ui-gc-invitee
  labels:
    test.miloapis.com/scenario: "userinvitation-policybinding-gc"
spec:
  email: invitee@ui-gc-test.local
  givenName: Invitee
  familyName: User
